--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,12 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=Etc/UTC
-    volumes:
-      - /home/user/configs:/config
     ports:
       - "3000:3000"
       - "3001:3001"
+    volumes:
+      - mysql_workbench_data:/config
 
 volumes:
   mysql_data:
+  mysql_workbench_data:
