--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,15 @@
-
 services:
   mysql:
-    image: mysql:8.0
-    container_name: my_mysql
+    build: .
+    container_name: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: mydatabase
+      MYSQL_DATABASE: princesses_database
       MYSQL_USER: user
       MYSQL_PASSWORD: user_password
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
 
@@ -22,8 +21,8 @@ services:
       - PGID=1000
       - TZ=Etc/UTC
     ports:
-      - "3000:3000"
-      - "3001:3001"
+      - "4000:3000"
+      - "4003:3001"
     volumes:
       - mysql_workbench_data:/config
 
