--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       MYSQL_PASSWORD: user_password
     ports:
       - "3306:3306"
-
+    volumes:
+      - mysql_data:/var/lib/mysql
 
   mysql-workbench:
     image: lscr.io/linuxserver/mysql-workbench:latest
@@ -22,4 +23,8 @@ services:
     ports:
       - "3000:3000"
       - "3001:3001"
-
+    volumes:
+      - mysql_workbench_data:/config
+volumes:
+  mysql_data:
+  mysql_workbench_data:
